--- a/_publications/my_publications.bib
+++ b/_publications/my_publications.bib
@@ -68,13 +68,6 @@
   organization={IEEE}
 }
 
-@inproceedings{na2019mixture,
-  title={Mixture of Pre-processing Experts Model for Noise Robust Deep Learning on Resource Constrained Platforms},
-  author={Na, Taesik and Lee, Minah and Mudassar, Burhan A and Saha, Priyabrata and Ko, Jong Hwan and Mukhopadhyay, Saibal},
-  booktitle={International Joint Conference on Neural Networks (IJCNN)},
-  year={2019}
-}
-
 @inproceedings{mudassar2019acamera,
   title={A Camera with Brain - Embedding Machine Learning in 3D Sensors},
   author={Mudassar, Burhan A and Saha, Priyabrata and Long, Yun and Amir, Mohammed F and Na, Taesik and Ko, Jong Hwan and Wolf, Marilyn and Mukhopadhyay, Saibal},
@@ -82,9 +75,15 @@
   year={2019}}
 
 @inproceedings{mudassar2019focal,
-  title={Mixture of Pre-processing Experts Model for Noise Robust Deep Learning on Resource Constrained Platforms},
+  title={FocalNet - Foveal Attention for Post-processing DNN Outputs},
   author={Mudassar, Burhan A and Mukhopadhyay, Saibal},
   booktitle={International Joint Conference on Neural Networks (IJCNN)},
   year={2019}
 }
 
+@inproceedings{na2019mixture,
+  title={Mixture of Pre-processing Experts Model for Noise Robust Deep Learning on Resource Constrained Platforms},
+  author={Na, Taesik and Lee, Minah and Mudassar, Burhan A and Saha, Priyabrata and Ko, Jong Hwan and Mukhopadhyay, Saibal},
+  booktitle={International Joint Conference on Neural Networks (IJCNN)},
+  year={2019}
+}
