--- a/_publications/my_publications.bib
+++ b/_publications/my_publications.bib
@@ -87,3 +87,17 @@
   booktitle={International Joint Conference on Neural Networks (IJCNN)},
   year={2019}
 }
+
+@inproceedings{minah2019spatiotemporal,
+  title={A Spatiotemporal Pre-processing Network for Activity Recognition Under Rain},
+  author={Lee, Minah and \textbf{Mudassar, Burhan A} and Na, Taesik and Mukhopadhyay, Saibal},
+  booktitle={British Machine Vision Conference (BMVC)},
+  year={2019}
+}
+
+@inproceedings{mudassar2019rethinking,
+  title={Rethinking Convolutional Feature Extraction for Small Object Detection},
+  author={\textbf{Mudassar, Burhan A} and Mukhopadhyay, Saibal},
+  booktitle={British Machine Vision Conference (BMVC)},
+  year={2019}
+}
