--- a/_publications/my_publications.bib
+++ b/_publications/my_publications.bib
@@ -88,16 +88,35 @@
   year={2019}
 }
 
+@article{mudassar2019camel,
+  title={An Adaptive Camera with Embedded Machine Learning Based Sensor Parameter Control},
+  author={Mudassar, Burhan Ahmad and Saha, Priyabrata and Long, Yun, and Amir, Mohammad Faisal and Gebhardt, Evan and Na, Taesik and Ko, Jong Hwan and Wolf, Marilyn and Mukhopadhyay, Saibal},
+  journal={IEEE Journal on Emerging Trends in Circuits and Systems},
+%   volume={0},
+%   number={0},
+%   pages={7--18},
+  year={2019},
+  publisher={IEEE}
+}
+
+@article{long2019ferroelectric,
+  title={A Ferroelectric FET based Processing-in-Memory Architecture for DNN Acceleration},
+  author={Long, Yun and Kim, Daehyun and Lee, Edward and Saha, Priyabrata and Mudassar, Burhan Ahmad and She, Xueyuan and Khan, Asif Islam and Mukhopadhyay, Saibal},
+  journal={IEEE Journal on Exploratory Solid-State Computational Devices and Circuits},
+  year={2019},
+  publisher={IEEE}
+}
+
 @inproceedings{minah2019spatiotemporal,
   title={A Spatiotemporal Pre-processing Network for Activity Recognition Under Rain},
-  author={Lee, Minah and \textbf{Mudassar, Burhan A} and Na, Taesik and Mukhopadhyay, Saibal},
+  author={Lee, Minah and Mudassar, Burhan A and Na, Taesik and Mukhopadhyay, Saibal},
   booktitle={British Machine Vision Conference (BMVC)},
   year={2019}
 }
 
 @inproceedings{mudassar2019rethinking,
   title={Rethinking Convolutional Feature Extraction for Small Object Detection},
-  author={\textbf{Mudassar, Burhan A} and Mukhopadhyay, Saibal},
+  author={Mudassar, Burhan A and Mukhopadhyay, Saibal},
   booktitle={British Machine Vision Conference (BMVC)},
   year={2019}
 }
