--- a/_publications/my_publications.bib
+++ b/_publications/my_publications.bib
@@ -89,12 +89,9 @@
 }
 
 @article{mudassar2019camel,
-  title={An Adaptive Camera with Embedded Machine Learning Based Sensor Parameter Control},
-  author={Mudassar, Burhan Ahmad and Saha, Priyabrata and Long, Yun, and Amir, Mohammad Faisal and Gebhardt, Evan and Na, Taesik and Ko, Jong Hwan and Wolf, Marilyn and Mukhopadhyay, Saibal},
-  journal={IEEE Journal on Emerging Trends in Circuits and Systems},
-%   volume={0},
-%   number={0},
-%   pages={7--18},
+  title={CAMEL: An Adaptive Camera with Embedded Machine Learning Based Sensor Parameter Control},
+  author={Mudassar, Burhan Ahmad and Saha, Priyabrata and Long, Yun and Amir, Mohammad Faisal and Gebhardt, Evan and Na, Taesik and Ko, Jong Hwan and Wolf, Marilyn and Mukhopadhyay, Saibal},
+  journal={IEEE Journal on Emerging and Selected Topics in Circuits and Systems},
   year={2019},
   publisher={IEEE}
 }
