--- a/_publications/my_publications.bib
+++ b/_publications/my_publications.bib
@@ -1,119 +1,84 @@
-@article{ko2015energy,
-  title={An energy-efficient wireless video sensor node for moving object surveillance},
-  author={Ko, Jong Hwan and Mudassar, Burhan Ahmad and Mukhopadhyay, Saibal},
-  journal={IEEE Transactions on Multi-Scale Computing Systems},
-  volume={1},
-  number={1},
-  pages={7--18},
-  year={2015},
-  publisher={IEEE}
-}
-
-
-@inproceedings{ko2017design,
-  title={Design of an energy-efficient accelerator for training of convolutional neural networks using frequency-domain computation},
-  author={Ko, Jong Hwan and Mudassar, Burhan and Na, Taesik and Mukhopadhyay, Saibal},
-  booktitle={2017 54th ACM/EDAC/IEEE Design Automation Conference (DAC)},
-  year={2017},
+@inproceedings{rana2011automatic,
+  title={Automatic control of ball and beam system using particle swarm optimization},
+  author={Rana, Muhammad Asif and Usman, Zubair and Shareef, Zeeshan},
+  booktitle={2011 IEEE 12th International Symposium on Computational Intelligence and Informatics (CINTI)},
+  pages={529--534},
+  year={2011},
   organization={IEEE}
 }
 
-@inproceedings{hadidi2017demystifying,
-  title={Demystifying the characteristics of 3D-stacked memories: A case study for Hybrid Memory Cube},
-  author={Hadidi, Ramyad and Asgari, Bahar and Mudassar, Burhan Ahmad and Mukhopadhyay, Saibal and Yalamanchili, Sudhakar and Kim, Hyesoon},
-  booktitle={2017 IEEE International Symposium on Workload Characterization (IISWC)},
-  pages={66--75},
-  year={2017},
+@inproceedings{shareef2014optimization,
+  title={Optimization of static and dynamic anti-windup compensator using new improved particle swarm optimization algorithm},
+  author={Shareef, Zeeshan and Usman, Zubair and Rana, Muhammad Asif},
+  booktitle={2014 IEEE 15th International Symposium on Computational Intelligence and Informatics (CINTI)},
+  pages={197--202},
+  year={2014},
   organization={IEEE}
 }
 
-@inproceedings{hadidi2018performance,
-  title={Performance implications of NoCs on 3D-stacked memories: Insights from the hybrid memory cube},
-  author={Hadidi, Ramyad and Asgari, Bahar and Young, Jeffrey and Mudassar, Burhan Ahmad and Garg, Kartikay and Krishna, Tushar and Kim, Hyesoon},
-  booktitle={2018 IEEE International Symposium on Performance Analysis of Systems and Software (ISPASS)},
-  pages={99--108},
+@inproceedings{rana2016modeling,
+  title={Modeling the effect of nanoparticles \& the bistability of transmembrane potential in non-excitable cells},
+  author={Rana, Muhammad Asif and Yao, Ningshi and Mukhopadhyay, Shayok and Zhang, Fumin and Warren, Emilie and Payne, Christine},
+  booktitle={2016 American Control Conference (ACC)},
+  pages={400--405},
+  year={2016},
+  organization={IEEE}
+}
+
+@inproceedings{ahmadzadeh2017generalized,
+  title={Generalized Cylinders for Learning, Reproduction, Generalization, and Refinement of Robot Skills},
+  author={Ahmadzadeh, S. R. and Rana, M. A. and Chernova, S.},
+  booktitle={Robotics: Science and Systems (RSS 2017)},
+  year={2017}
+}
+
+@inproceedings{rana2017skill,
+  title={Skill Generalization via Inference-based Planning},
+  author={Rana, M. A and Mukadam, M and Ahamadzadeh, S.R and Chernova, S. and Boots, Byron},
+  booktitle={Robotics: Science and Systems (RSS 2017), Workshop on Mathematical Models, Algorithms, and Human-Robot Interaction},
+  year={2017}
+}
+
+@inproceedings{rana2018towards,
+  title={Towards robust skill generalization: Unifying learning from demonstration and motion planning},
+  author={Rana, M and Mukadam, Mustafa and Ahmadzadeh, Seyed Reza and Chernova, Sonia and Boots, Byron},
+  booktitle={Intelligent robots and systems},
+  year={2018}
+}
+
+@inproceedings{rana2018learning,
+  title={Learning generalizable robot skills from demonstrations in cluttered environments},
+  author={Rana, M Asif and Mukadam, Mustafa and Ahmadzadeh, S Reza and Chernova, Sonia and Boots, Byron},
+  booktitle={2018 IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS)},
+  pages={4655--4660},
   year={2018},
   organization={IEEE}
 }
 
-@inproceedings{mukhopodhyay2018camel,
-  title={The CAMEL approach to stacked sensor smart cameras},
-  author={Mukhopodhyay, Saibal and Wolf, Marilyn and Amir, Mohammed F and Gebahrdt, Evan and Ko, Jong Hwan and Kung, Jae Ha and Musassar, Burhan A},
-  booktitle={Proceedings of the Conference on Design, Automation & Test in Europe (DATE)},
-  year={2018}}
-
-@inproceedings{mudassar2018unsupervised,
-  title={An unsupervised anomalous event detection framework with class aware source separation},
-  author={Mudassar, Burhan A and Ko, Jong Hwan and Mukhopadhyay, Saibal},
-  booktitle={2018 IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP)},
-  pages={2671--2675},
-  year={2018},
-  organization={IEEE}
-}
-
-@inproceedings{mudassar2018edge,
-  title={Edge-cloud collaborative processing for intelligent internet of things: A case study on smart surveillance},
-  author={Mudassar, Burhan A and Ko, Jong Hwan and Mukhopadhyay, Saibal},
-  booktitle={2018 55th ACM/ESDA/IEEE Design Automation Conference (DAC)},
-  year={2018},
-  organization={IEEE}
-}
-
-@inproceedings{saha2018adaptive,
-  title={Adaptive Control of Camera Modality with Deep Neural Network-Based Feedback for Efficient Object Tracking},
-  author={Saha, Priyabrata and Mudassar, Burhan A and Mukhopadhyay, Saibal},
-  booktitle={2018 15th IEEE International Conference on Advanced Video and Signal Based Surveillance (AVSS)},
-  pages={1--6},
-  year={2018},
-  organization={IEEE}
-}
-
-@inproceedings{mudassar2019acamera,
-  title={A Camera with Brain - Embedding Machine Learning in 3D Sensors},
-  author={Mudassar, Burhan A and Saha, Priyabrata and Long, Yun and Amir, Mohammed F and Na, Taesik and Ko, Jong Hwan and Wolf, Marilyn and Mukhopadhyay, Saibal},
-  booktitle={Proceedings of the Conference on Design, Automation & Test in Europe (DATE)},
-  year={2019}}
-
-@inproceedings{mudassar2019focal,
-  title={FocalNet - Foveal Attention for Post-processing DNN Outputs},
-  author={Mudassar, Burhan A and Mukhopadhyay, Saibal},
-  booktitle={International Joint Conference on Neural Networks (IJCNN)},
-  year={2019}
-}
-
-@inproceedings{na2019mixture,
-  title={Mixture of Pre-processing Experts Model for Noise Robust Deep Learning on Resource Constrained Platforms},
-  author={Na, Taesik and Lee, Minah and Mudassar, Burhan A and Saha, Priyabrata and Ko, Jong Hwan and Mukhopadhyay, Saibal},
-  booktitle={International Joint Conference on Neural Networks (IJCNN)},
-  year={2019}
-}
-
-@article{mudassar2019camel,
-  title={CAMEL: An Adaptive Camera with Embedded Machine Learning Based Sensor Parameter Control},
-  author={Mudassar, Burhan Ahmad and Saha, Priyabrata and Long, Yun and Amir, Mohammad Faisal and Gebhardt, Evan and Na, Taesik and Ko, Jong Hwan and Wolf, Marilyn and Mukhopadhyay, Saibal},
-  journal={IEEE Journal on Emerging and Selected Topics in Circuits and Systems},
+@inproceedings{ravichandar2019skill,
+  title={Skill acquisition via automated multi-coordinate cost balancing},
+  author={Ravichandar, Harish and Ahmadzadeh, S Reza and Rana, M Asif and Chernova, Sonia},
+  booktitle={2019 International Conference on Robotics and Automation (ICRA)},
+  pages={7776--7782},
   year={2019},
-  publisher={IEEE}
+  organization={IEEE}
 }
 
-@article{long2019ferroelectric,
-  title={A Ferroelectric FET based Processing-in-Memory Architecture for DNN Acceleration},
-  author={Long, Yun and Kim, Daehyun and Lee, Edward and Saha, Priyabrata and Mudassar, Burhan Ahmad and She, Xueyuan and Khan, Asif Islam and Mukhopadhyay, Saibal},
-  journal={IEEE Journal on Exploratory Solid-State Computational Devices and Circuits},
-  year={2019},
-  publisher={IEEE}
-}
-
-@inproceedings{minah2019spatiotemporal,
-  title={A Spatiotemporal Pre-processing Network for Activity Recognition Under Rain},
-  author={Lee, Minah and Mudassar, Burhan A and Na, Taesik and Mukhopadhyay, Saibal},
-  booktitle={British Machine Vision Conference (BMVC)},
+@article{banerjee2019taking,
+  title={Taking Recoveries to Task: Recovery-Driven Development for Recipe-based Robot Tasks},
+  author={Banerjee, Siddhartha and Daruna, Angel and Kent, David and Liu, Weiyu and Balloch, Jonathan and Jain, Abhinav and Krishnan, Akshay and Rana, Muhammad Asif and Ravichandar, Harish and Shah, Binit and others},
   year={2019}
 }
 
-@inproceedings{mudassar2019rethinking,
-  title={Rethinking Convolutional Feature Extraction for Small Object Detection},
-  author={Mudassar, Burhan A and Mukhopadhyay, Saibal},
-  booktitle={British Machine Vision Conference (BMVC)},
+@article{rana2019benchmark,
+  title={Benchmark for Skill Learning from Demonstration: Impact of User Experience, Task Complexity, and Start Configuration on Performance},
+  author={Rana, M Asif and Chen, Daphne and Ahmadzadeh, S Reza and Williams, Jacob and Chu, Vivian and Chernova, Sonia},
+  journal={arXiv preprint arXiv:1911.02725},
+  year={2019}
+}
+
+@article{rana2019learning,
+  title={Learning Reactive Motion Policies in Multiple Task Spaces from Human Demonstrations},
+  author={Rana, M Asif and Li, Anqi and Ravichandar, Harish and Mukadam, Mustafa and Chernova, Sonia and Fox, Dieter and Boots, Byron and Ratliff, Nathan},
   year={2019}
 }
