--- a/_publications/Mudassar_Burhan_Ahmad.bib
+++ b/_publications/Mudassar_Burhan_Ahmad.bib
@@ -1,269 +1,84 @@
-@article{DBLP:journals/corr/abs-1904-12426,
-  author    = {Taesik Na and
-               Minah Lee and
-               Burhan Ahmad Mudassar and
-               Priyabrata Saha and
-               Jong Hwan Ko and
-               Saibal Mukhopadhyay},
-  title     = {Mixture of Pre-processing Experts Model for Noise Robust Deep Learning
-               on Resource Constrained Platforms},
-  journal   = {CoRR},
-  volume    = {abs/1904.12426},
-  year      = {2019},
-  url       = {http://arxiv.org/abs/1904.12426},
-  archivePrefix = {arXiv},
-  eprint    = {1904.12426},
-  timestamp = {Thu, 02 May 2019 01:00:00 +0200},
-  biburl    = {https://dblp.org/rec/bib/journals/corr/abs-1904-12426},
-  bibsource = {dblp computer science bibliography, https://dblp.org}
+@inproceedings{rana2011automatic,
+  title={Automatic control of ball and beam system using particle swarm optimization},
+  author={Rana, Muhammad Asif and Usman, Zubair and Shareef, Zeeshan},
+  booktitle={2011 IEEE 12th International Symposium on Computational Intelligence and Informatics (CINTI)},
+  pages={529--534},
+  year={2011},
+  organization={IEEE}
 }
 
-@inproceedings{DBLP:conf/avss/SahaMM18,
-  author    = {Priyabrata Saha and
-               Burhan Ahmad Mudassar and
-               Saibal Mukhopadhyay},
-  title     = {Adaptive Control of Camera Modality with Deep Neural Network-Based
-               Feedback for Efficient Object Tracking},
-  booktitle = {15th {IEEE} International Conference on Advanced Video and Signal
-               Based Surveillance, {AVSS} 2018, Auckland, New Zealand, November 27-30,
-               2018},
-  pages     = {1--6},
-  year      = {2018},
-  crossref  = {DBLP:conf/avss/2018},
-  url       = {https://doi.org/10.1109/AVSS.2018.8639423},
-  doi       = {10.1109/AVSS.2018.8639423},
-  timestamp = {Mon, 18 Feb 2019 11:16:07 +0100},
-  biburl    = {https://dblp.org/rec/bib/conf/avss/SahaMM18},
-  bibsource = {dblp computer science bibliography, https://dblp.org}
+@inproceedings{shareef2014optimization,
+  title={Optimization of static and dynamic anti-windup compensator using new improved particle swarm optimization algorithm},
+  author={Shareef, Zeeshan and Usman, Zubair and Rana, Muhammad Asif},
+  booktitle={2014 IEEE 15th International Symposium on Computational Intelligence and Informatics (CINTI)},
+  pages={197--202},
+  year={2014},
+  organization={IEEE}
 }
 
-@inproceedings{DBLP:conf/dac/MudassarKM18,
-  author    = {Burhan Ahmad Mudassar and
-               Jong Hwan Ko and
-               Saibal Mukhopadhyay},
-  title     = {Edge-cloud collaborative processing for intelligent internet of things:
-               a case study on smart surveillance},
-  booktitle = {Proceedings of the 55th Annual Design Automation Conference, {DAC}
-               2018, San Francisco, CA, USA, June 24-29, 2018},
-  pages     = {146:1--146:6},
-  year      = {2018},
-  crossref  = {DBLP:conf/dac/2018},
-  url       = {https://doi.org/10.1145/3195970.3196036},
-  doi       = {10.1145/3195970.3196036},
-  timestamp = {Wed, 21 Nov 2018 00:00:00 +0100},
-  biburl    = {https://dblp.org/rec/bib/conf/dac/MudassarKM18},
-  bibsource = {dblp computer science bibliography, https://dblp.org}
+@inproceedings{rana2016modeling,
+  title={Modeling the effect of nanoparticles \& the bistability of transmembrane potential in non-excitable cells},
+  author={Rana, Muhammad Asif and Yao, Ningshi and Mukhopadhyay, Shayok and Zhang, Fumin and Warren, Emilie and Payne, Christine},
+  booktitle={2016 American Control Conference (ACC)},
+  pages={400--405},
+  year={2016},
+  organization={IEEE}
 }
 
-@inproceedings{DBLP:conf/icassp/MudassarKM18,
-  author    = {Burhan Ahmad Mudassar and
-               Jong Hwan Ko and
-               Saibal Mukhopadhyay},
-  title     = {An Unsupervised Anomalous Event Detection Framework with Class Aware
-               Source Separation},
-  booktitle = {2018 {IEEE} International Conference on Acoustics, Speech and Signal
-               Processing, {ICASSP} 2018, Calgary, AB, Canada, April 15-20, 2018},
-  pages     = {2671--2675},
-  year      = {2018},
-  crossref  = {DBLP:conf/icassp/2018},
-  url       = {https://doi.org/10.1109/ICASSP.2018.8462309},
-  doi       = {10.1109/ICASSP.2018.8462309},
-  timestamp = {Tue, 18 Sep 2018 09:50:15 +0200},
-  biburl    = {https://dblp.org/rec/bib/conf/icassp/MudassarKM18},
-  bibsource = {dblp computer science bibliography, https://dblp.org}
+@inproceedings{ahmadzadeh2017generalized,
+  title={Generalized Cylinders for Learning, Reproduction, Generalization, and Refinement of Robot Skills},
+  author={Ahmadzadeh, S. R. and Rana, M. A. and Chernova, S.},
+  booktitle={Robotics: Science and Systems (RSS 2017)},
+  year={2017}
 }
 
-@inproceedings{DBLP:conf/ispass/HadidiAYMGKK18,
-  author    = {Ramyad Hadidi and
-               Bahar Asgari and
-               Jeffrey Young and
-               Burhan Ahmad Mudassar and
-               Kartikay Garg and
-               Tushar Krishna and
-               Hyesoon Kim},
-  title     = {Performance Implications of NoCs on 3D-Stacked Memories: Insights
-               from the Hybrid Memory Cube},
-  booktitle = {{IEEE} International Symposium on Performance Analysis of Systems
-               and Software, {ISPASS} 2018, Belfast, United Kingdom, April 2-4, 2018},
-  pages     = {99--108},
-  year      = {2018},
-  crossref  = {DBLP:conf/ispass/2018},
-  url       = {https://doi.org/10.1109/ISPASS.2018.00018},
-  doi       = {10.1109/ISPASS.2018.00018},
-  timestamp = {Wed, 30 May 2018 12:55:24 +0200},
-  biburl    = {https://dblp.org/rec/bib/conf/ispass/HadidiAYMGKK18},
-  bibsource = {dblp computer science bibliography, https://dblp.org}
+@inproceedings{rana2017skill,
+  title={Skill Generalization via Inference-based Planning},
+  author={Rana, M. A and Mukadam, M and Ahamadzadeh, S.R and Chernova, S. and Boots, Byron},
+  booktitle={Robotics: Science and Systems (RSS 2017), Workshop on Mathematical Models, Algorithms, and Human-Robot Interaction},
+  year={2017}
 }
 
-@inproceedings{DBLP:conf/dac/KoMNM17,
-  author    = {Jong Hwan Ko and
-               Burhan Ahmad Mudassar and
-               Taesik Na and
-               Saibal Mukhopadhyay},
-  title     = {Design of an Energy-Efficient Accelerator for Training of Convolutional
-               Neural Networks using Frequency-Domain Computation},
-  booktitle = {Proceedings of the 54th Annual Design Automation Conference, {DAC}
-               2017, Austin, TX, USA, June 18-22, 2017},
-  pages     = {59:1--59:6},
-  year      = {2017},
-  crossref  = {DBLP:conf/dac/2017},
-  url       = {https://doi.org/10.1145/3061639.3062228},
-  doi       = {10.1145/3061639.3062228},
-  timestamp = {Tue, 06 Nov 2018 16:58:15 +0100},
-  biburl    = {https://dblp.org/rec/bib/conf/dac/KoMNM17},
-  bibsource = {dblp computer science bibliography, https://dblp.org}
+@inproceedings{rana2018towards,
+  title={Towards robust skill generalization: Unifying learning from demonstration and motion planning},
+  author={Rana, M and Mukadam, Mustafa and Ahmadzadeh, Seyed Reza and Chernova, Sonia and Boots, Byron},
+  booktitle={Intelligent robots and systems},
+  year={2018}
 }
 
-@inproceedings{DBLP:conf/iiswc/HadidiAMMYK17,
-  author    = {Ramyad Hadidi and
-               Bahar Asgari and
-               Burhan Ahmad Mudassar and
-               Saibal Mukhopadhyay and
-               Sudhakar Yalamanchili and
-               Hyesoon Kim},
-  title     = {Demystifying the characteristics of 3D-stacked memories: {A} case
-               study for Hybrid Memory Cube},
-  booktitle = {2017 {IEEE} International Symposium on Workload Characterization,
-               {IISWC} 2017, Seattle, WA, USA, October 1-3, 2017},
-  pages     = {66--75},
-  year      = {2017},
-  crossref  = {DBLP:conf/iiswc/2017},
-  url       = {https://doi.org/10.1109/IISWC.2017.8167757},
-  doi       = {10.1109/IISWC.2017.8167757},
-  timestamp = {Wed, 13 Dec 2017 00:00:00 +0100},
-  biburl    = {https://dblp.org/rec/bib/conf/iiswc/HadidiAMMYK17},
-  bibsource = {dblp computer science bibliography, https://dblp.org}
+@inproceedings{rana2018learning,
+  title={Learning generalizable robot skills from demonstrations in cluttered environments},
+  author={Rana, M Asif and Mukadam, Mustafa and Ahmadzadeh, S Reza and Chernova, Sonia and Boots, Byron},
+  booktitle={2018 IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS)},
+  pages={4655--4660},
+  year={2018},
+  organization={IEEE}
 }
 
-@article{DBLP:journals/corr/HadidiAMMYK17,
-  author    = {Ramyad Hadidi and
-               Bahar Asgari and
-               Burhan Ahmad Mudassar and
-               Saibal Mukhopadhyay and
-               Sudhakar Yalamanchili and
-               Hyesoon Kim},
-  title     = {Demystifying the Characteristics of 3D-Stacked Memories: {A} Case
-               Study for Hybrid Memory Cube},
-  journal   = {CoRR},
-  volume    = {abs/1706.02725},
-  year      = {2017},
-  url       = {http://arxiv.org/abs/1706.02725},
-  archivePrefix = {arXiv},
-  eprint    = {1706.02725},
-  timestamp = {Mon, 13 Aug 2018 01:00:00 +0200},
-  biburl    = {https://dblp.org/rec/bib/journals/corr/HadidiAMMYK17},
-  bibsource = {dblp computer science bibliography, https://dblp.org}
+@inproceedings{ravichandar2019skill,
+  title={Skill acquisition via automated multi-coordinate cost balancing},
+  author={Ravichandar, Harish and Ahmadzadeh, S Reza and Rana, M Asif and Chernova, Sonia},
+  booktitle={2019 International Conference on Robotics and Automation (ICRA)},
+  pages={7776--7782},
+  year={2019},
+  organization={IEEE}
 }
 
-@article{DBLP:journals/corr/HadidiAYMGKK17,
-  author    = {Ramyad Hadidi and
-               Bahar Asgari and
-               Jeffrey Young and
-               Burhan Ahmad Mudassar and
-               Kartikay Garg and
-               Tushar Krishna and
-               Hyesoon Kim},
-  title     = {Performance Implications of NoCs on 3D-Stacked Memories: Insights
-               from the Hybrid Memory Cube},
-  journal   = {CoRR},
-  volume    = {abs/1707.05399},
-  year      = {2017},
-  url       = {http://arxiv.org/abs/1707.05399},
-  archivePrefix = {arXiv},
-  eprint    = {1707.05399},
-  timestamp = {Mon, 13 Aug 2018 01:00:00 +0200},
-  biburl    = {https://dblp.org/rec/bib/journals/corr/HadidiAYMGKK17},
-  bibsource = {dblp computer science bibliography, https://dblp.org}
+@article{banerjee2019taking,
+  title={Taking Recoveries to Task: Recovery-Driven Development for Recipe-based Robot Tasks},
+  author={Banerjee, Siddhartha and Daruna, Angel and Kent, David and Liu, Weiyu and Balloch, Jonathan and Jain, Abhinav and Krishnan, Akshay and Rana, Muhammad Asif and Ravichandar, Harish and Shah, Binit and others},
+  year={2019}
 }
 
-@article{DBLP:journals/tmscs/KoMM15,
-  author    = {Jong Hwan Ko and
-               Burhan Ahmad Mudassar and
-               Saibal Mukhopadhyay},
-  title     = {An Energy-Efficient Wireless Video Sensor Node for Moving Object Surveillance},
-  journal   = {{IEEE} Trans. Multi-Scale Computing Systems},
-  volume    = {1},
-  number    = {1},
-  pages     = {7--18},
-  year      = {2015},
-  url       = {https://doi.org/10.1109/TMSCS.2015.2478469},
-  doi       = {10.1109/TMSCS.2015.2478469},
-  timestamp = {Sun, 28 May 2017 01:00:00 +0200},
-  biburl    = {https://dblp.org/rec/bib/journals/tmscs/KoMM15},
-  bibsource = {dblp computer science bibliography, https://dblp.org}
+@article{rana2019benchmark,
+  title={Benchmark for Skill Learning from Demonstration: Impact of User Experience, Task Complexity, and Start Configuration on Performance},
+  author={Rana, M Asif and Chen, Daphne and Ahmadzadeh, S Reza and Williams, Jacob and Chu, Vivian and Chernova, Sonia},
+  journal={arXiv preprint arXiv:1911.02725},
+  year={2019}
 }
 
-@proceedings{DBLP:conf/avss/2018,
-  title     = {15th {IEEE} International Conference on Advanced Video and Signal
-               Based Surveillance, {AVSS} 2018, Auckland, New Zealand, November 27-30,
-               2018},
-  publisher = {{IEEE}},
-  year      = {2018},
-  url       = {http://ieeexplore.ieee.org/xpl/mostRecentIssue.jsp?punumber=8637085},
-  isbn      = {978-1-5386-9294-3},
-  timestamp = {Mon, 18 Feb 2019 11:16:07 +0100},
-  biburl    = {https://dblp.org/rec/bib/conf/avss/2018},
-  bibsource = {dblp computer science bibliography, https://dblp.org}
+@article{rana2019learning,
+  title={Learning Reactive Motion Policies in Multiple Task Spaces from Human Demonstrations},
+  author={Rana, M Asif and Li, Anqi and Ravichandar, Harish and Mukadam, Mustafa and Chernova, Sonia and Fox, Dieter and Boots, Byron and Ratliff, Nathan},
+  year={2019}
 }
-
-@proceedings{DBLP:conf/dac/2018,
-  title     = {Proceedings of the 55th Annual Design Automation Conference, {DAC}
-               2018, San Francisco, CA, USA, June 24-29, 2018},
-  publisher = {{ACM}},
-  year      = {2018},
-  url       = {http://dl.acm.org/citation.cfm?id=3195970},
-  isbn      = {978-1-5386-4114-9},
-  timestamp = {Mon, 24 Sep 2018 12:07:45 +0200},
-  biburl    = {https://dblp.org/rec/bib/conf/dac/2018},
-  bibsource = {dblp computer science bibliography, https://dblp.org}
-}
-
-@proceedings{DBLP:conf/icassp/2018,
-  title     = {2018 {IEEE} International Conference on Acoustics, Speech and Signal
-               Processing, {ICASSP} 2018, Calgary, AB, Canada, April 15-20, 2018},
-  publisher = {{IEEE}},
-  year      = {2018},
-  url       = {http://ieeexplore.ieee.org/xpl/mostRecentIssue.jsp?punumber=8450881},
-  isbn      = {978-1-5386-4658-8},
-  timestamp = {Tue, 18 Sep 2018 09:50:15 +0200},
-  biburl    = {https://dblp.org/rec/bib/conf/icassp/2018},
-  bibsource = {dblp computer science bibliography, https://dblp.org}
-}
-
-@proceedings{DBLP:conf/ispass/2018,
-  title     = {{IEEE} International Symposium on Performance Analysis of Systems
-               and Software, {ISPASS} 2018, Belfast, United Kingdom, April 2-4, 2018},
-  publisher = {{IEEE} Computer Society},
-  year      = {2018},
-  url       = {http://ieeexplore.ieee.org/xpl/mostRecentIssue.jsp?punumber=8360838},
-  isbn      = {978-1-5386-5010-3},
-  timestamp = {Wed, 30 May 2018 12:55:24 +0200},
-  biburl    = {https://dblp.org/rec/bib/conf/ispass/2018},
-  bibsource = {dblp computer science bibliography, https://dblp.org}
-}
-
-@proceedings{DBLP:conf/dac/2017,
-  title     = {Proceedings of the 54th Annual Design Automation Conference, {DAC}
-               2017, Austin, TX, USA, June 18-22, 2017},
-  publisher = {{ACM}},
-  year      = {2017},
-  url       = {https://doi.org/10.1145/3061639},
-  doi       = {10.1145/3061639},
-  isbn      = {978-1-4503-4927-7},
-  timestamp = {Tue, 06 Nov 2018 16:58:15 +0100},
-  biburl    = {https://dblp.org/rec/bib/conf/dac/2017},
-  bibsource = {dblp computer science bibliography, https://dblp.org}
-}
-
-@proceedings{DBLP:conf/iiswc/2017,
-  title     = {2017 {IEEE} International Symposium on Workload Characterization,
-               {IISWC} 2017, Seattle, WA, USA, October 1-3, 2017},
-  publisher = {{IEEE} Computer Society},
-  year      = {2017},
-  url       = {http://ieeexplore.ieee.org/xpl/mostRecentIssue.jsp?punumber=8122074},
-  isbn      = {978-1-5386-1233-0},
-  timestamp = {Tue, 12 Dec 2017 10:56:09 +0100},
-  biburl    = {https://dblp.org/rec/bib/conf/iiswc/2017},
-  bibsource = {dblp computer science bibliography, https://dblp.org}
-}
-
