--- a/_publications/my_publications.bib
+++ b/_publications/my_publications.bib
@@ -70,15 +70,23 @@
   year={2019}
 }
 
-@article{rana2019benchmark,
-  title={Benchmark for Skill Learning from Demonstration: Impact of User Experience, Task Complexity, and Start Configuration on Performance},
-  author={Rana, M Asif and Chen, Daphne and Ahmadzadeh, S Reza and Williams, Jacob and Chu, Vivian and Chernova, Sonia},
-  journal={arXiv preprint arXiv:1911.02725},
-  year={2019}
-}
-
 @article{rana2019learning,
   title={Learning Reactive Motion Policies in Multiple Task Spaces from Human Demonstrations},
   author={Rana, M Asif and Li, Anqi and Ravichandar, Harish and Mukadam, Mustafa and Chernova, Sonia and Fox, Dieter and Boots, Byron and Ratliff, Nathan},
   year={2019}
+}
+
+@article{rana2020benchmark,
+  title={Benchmark for Skill Learning from Demonstration: Impact of User Experience, Task Complexity, and Start Configuration on Performance},
+  author={Rana, M Asif and Chen, Daphne and Ahmadzadeh, S Reza and Williams, Jacob and Chu, Vivian and Chernova, Sonia},
+  booktitle={2020 International Conference on Robotics and Automation (ICRA)},
+  year={2020},
+  organization={IEEE}
+}
+
+@article{rana2020euclideanizing,
+  title={Euclideanizing Flows: Diffeomorphic Reduction for Learning Stable Dynamical Systems},
+  author={Rana, M Asif and Li, Anqi and Fox, Dieter and Ramos, Fabio and Boots, Byron and Ratliff, Nathan},
+  booktitle={Learning for Dynamics and Control (L4DC)},
+  year={2020}
 }
